grammars/command/test/corpus/guides.txt
===========================================
new guide vertical <relative offset>
===========================================
new guide vertical +4.5mm
---
(source_file
  (new
    (entity
      (guide
          (vertical
            (offset))))))


===========================================
new guide vertical <relative offset>
===========================================
new guide vertical -4.5mm
---
(source_file
  (new
    (entity
      (guide
          (vertical
            (offset))))))

===========================================
new guide vertical <absolute offset>
===========================================
new guide vertical @4.5mm
---
(source_file
  (new
    (entity
      (guide
          (vertical
            (absolute)
            (offset))))))


===========================================
new guide <name> vertical <relative offset>
===========================================
new guide v1 vertical +4.5mm
---
(source_file
  (new
    (entity
      (guide
        (identifier)
          (vertical
            (offset))))))


=============================================
new guide horizontal <relative offset>
=============================================
new guide horizontal +4.5mm
---
(source_file
  (new
    (entity
      (guide
          (horizontal
            (offset))))))


=============================================
new guide <name> horizontal <relative offset>
=============================================
new guide v1 horizontal +4.5mm
---
(source_file
  (new
    (entity
      (guide
        (identifier)
          (horizontal
            (offset))))))


==============
new guide left
==============
new guide left
---
(source_file
  (new
    (entity
      (guide
        (geometry
          (reference))))))


=====================
new guide <name> left
=====================
new guide l1 left
---
(source_file
  (new
    (entity
      (guide
        (identifier)
        (geometry
          (reference))))))


=====================
new guide left <offset
=====================
new guide left+4.5mm
---
(source_file
  (new
    (entity
      (guide
        (geometry
          (reference)
          (offset))))))


==============================
new guide <name> left <offset>
=============================
new guide l1 left+4.5mm
---
(source_file
  (new
    (entity
      (guide
        (identifier)
        (geometry
          (reference)
          (offset))))))


================
new guide centre
================
new guide centre
---
(source_file
  (new
    (entity
      (guide
        (geometry
          (reference))))))


================
new guide center
================
new guide center
---
(source_file
  (new
    (entity
      (guide
        (geometry
          (reference))))))


===============
new guide right
===============
new guide right
---
(source_file
  (new
    (entity
      (guide
        (geometry
          (reference))))))


=============
new guide top
=============
new guide top
---
(source_file
  (new
    (entity
      (guide
        (geometry
          (reference))))))


================
new guide middle
================
new guide middle
---
(source_file
  (new
    (entity
      (guide
        (geometry
          (reference))))))


================
new guide bottom
================
new guide bottom
---
(source_file
  (new
    (entity
      (guide
        (geometry
          (reference))))))
