grammars/command/test/corpus/labels.txt
============================
new label "lorem" @10mm,10mm
============================
new label "lorem" @10mm,10mm
---
(command
  (new
    (label
      (string)
      (absolute
        (x)
        (y)))))


===========================
new label "lorem" 10mm,10mm
===========================
new label "lorem" 10mm,10mm
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y)))))


===============================
new label "lorem" centre,middle
===============================
new label "lorem" centre,middle
---
(command
  (new
    (label
      (string)
      (x
        (reference))
      (y
        (reference)))))


=========================================
new label "lorem" centre+10mm,middle-10mm
=========================================
new label "lorem" centre+10mm,middle-10mm
---
(command
  (new
    (label
      (string)
      (x
        (reference)
        (offset))
      (y
        (reference)
        (offset)))))


=======================
new label "lorem" v1,h1
=======================
new label "lorem" v1,h1
---
(command
  (new
    (label
      (string)
      (x
        (reference))
      (y
        (reference)))))


=================================
new label "lorem" v1+10mm,h1-10mm
=================================
new label "lorem" v1+10mm,h1-10mm
---
(command
  (new
    (label
      (string)
      (x
        (reference)
        (offset))
      (y
        (reference)
        (offset)))))


=======================================
new label "lorem" (input e +10mm,-10mm)
======================================
new label "lorem" (input e +10mm,-10mm)
---
(command
  (new
    (label
      (string)
      (decorate
        (input)
        (name)
        (dx)
        (dy)))))


===========================================
new label "lorem" (parameter E +10mm,-10mm)
===========================================
new label "lorem" (parameter E +10mm,-10mm)
---
(command
  (new
    (label
      (string)
      (decorate
        (parameter)
        (name)
        (dx)
        (dy)))))


=======================================
new label "lorem" 10mm,10mm "Lato-Bold"
=======================================
new label "lorem" 10mm,10mm "Lato-Bold"
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (font))))


============================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt
============================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (font)
      (fontsize))))


================================
new label "lorem" 10mm,10mm 14pt
================================
new label "lorem" 10mm,10mm 14pt
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (fontsize))))


===================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre
===================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (font)
      (fontsize)
      (halign))))


=======================================
new label "lorem" 10mm,10mm 14pt centre
=======================================
new label "lorem" 10mm,10mm 14pt centre
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (fontsize)
      (halign))))


==================================
new label "lorem" 10mm,10mm centre
==================================
new label "lorem" 10mm,10mm centre
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (halign))))


============================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre,baseline
============================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre,baseline
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (font)
      (fontsize)
      (halign)
      (valign))))


================================================
new label "lorem" 10mm,10mm 14pt centre,baseline
================================================
new label "lorem" 10mm,10mm 14pt centre,baseline
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (fontsize)
      (halign)
      (valign))))


===========================================
new label "lorem" 10mm,10mm centre,baseline
===========================================
new label "lorem" 10mm,10mm centre,baseline
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (halign)
      (valign))))


===========================================
new label "lorem" 10mm,10mm baseline,centre
===========================================
new label "lorem" 10mm,10mm baseline,centre
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (valign)
      (halign))))


====================================
new label "lorem" 10mm,10mm baseline
====================================
new label "lorem" 10mm,10mm baseline
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (valign))))


====================================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre,baseline #ff0000
====================================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre,baseline #ff0000
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (font)
      (fontsize)
      (halign)
      (valign)
      (colour
        (rgb)))))


======================================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre,baseline #ff0000aa
======================================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre,baseline #ff0000aa
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (font)
      (fontsize)
      (halign)
      (valign)
      (colour
        (rgba)))))


========================================================
new label "lorem" 10mm,10mm 14pt centre,baseline #ff0000
========================================================
new label "lorem" 10mm,10mm 14pt centre,baseline #ff0000
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (fontsize)
      (halign)
      (valign)
      (colour 
        (rgb)))))


===================================================
new label "lorem" 10mm,10mm centre,baseline #ff0000
===================================================
new label "lorem" 10mm,10mm centre,baseline #ff0000
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (halign)
      (valign)
      (colour 
        (rgb)))))


==========================================
new label "lorem" 10mm,10mm centre #ff0000
==========================================
new label "lorem" 10mm,10mm centre #ff0000
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (halign)
      (colour
        (rgb)))))


============================================
new label "lorem" 10mm,10mm baseline #ff0000
============================================
new label "lorem" 10mm,10mm baseline #ff0000
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (valign)
      (colour 
        (rgb)))))


===================================
new label "lorem" 10mm,10mm #ff0000
===================================
new label "lorem" 10mm,10mm #ff0000
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (colour
        (rgb)))))


============================================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre,baseline #ff0000,#00ff00
============================================================================
new label "lorem" 10mm,10mm "Lato-Bold" 14pt centre,baseline #ff0000,#00ff00
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (font)
      (fontsize)
      (halign)
      (valign)
      (colour
        (rgb)
        (rgb)))))


================================================================
new label "lorem" 10mm,10mm 14pt centre,baseline #ff0000,#00ff00
================================================================
new label "lorem" 10mm,10mm 14pt centre,baseline #ff0000,#00ff00
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (fontsize)
      (halign)
      (valign)
      (colour
        (rgb)
        (rgb)))))


===========================================================
new label "lorem" 10mm,10mm centre,baseline #ff0000,#00ff00
===========================================================
new label "lorem" 10mm,10mm centre,baseline #ff0000,#00ff00
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (halign)
      (valign)
      (colour
        (rgb)
        (rgb)))))


==================================================
new label "lorem" 10mm,10mm centre #ff0000,#00ff00
==================================================
new label "lorem" 10mm,10mm centre #ff0000,#00ff00
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (halign)
      (colour
        (rgb)
        (rgb)))))


====================================================
new label "lorem" 10mm,10mm baseline #ff0000,#00ff00
====================================================
new label "lorem" 10mm,10mm baseline #ff0000,#00ff00
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (valign)
      (colour
        (rgb)
        (rgb)))))


===========================================
new label "lorem" 10mm,10mm #ff0000,#00ff00
===========================================
new label "lorem" 10mm,10mm #ff0000,#00ff00
---
(command
  (new
    (label
      (string)
      (relative
        (x)
        (y))
      (colour
        (rgb)
        (rgb)))))
