grammars/command/test/corpus/parameters.txt
========================
new param "E" @10mm,10mm
========================
new param "E" @10mm,10mm
---
(command
  (new
    (parameter
      (name)
      (absolute
        (x)
        (y)))))


============================
new parameter "E" @10mm,10mm
============================
new parameter "E" @10mm,10mm
---
(command
  (new
    (parameter
      (name)
      (absolute
        (x)
        (y)))))


===========================================
new parameter "E" @10mm,10mm RoundBlackKnob
===========================================
new parameter "E" @10mm,10mm RoundBlackKnob
---
(command
  (new
    (parameter
      (name)
      (absolute
        (x)
        (y))
      (part))))


===============================================
new parameter "E" @10mm,10mm "Round Black Knob"
===============================================
new parameter "E" @10mm,10mm "Round Black Knob"
---
(command
  (new
    (parameter
      (name)
      (absolute
        (x)
        (y))
      (part))))

===============================================
new parameter "E" @10mm,10mm 'Round Black Knob'
===============================================
new parameter "E" @10mm,10mm 'Round Black Knob'
---
(command
  (new
    (parameter
      (name)
      (absolute
        (x)
        (y))
      (part))))


==========================
new parameter "E" left,top
==========================
new parameter "E" left,top
---
(command
  (new
    (parameter
      (name)
      (x
        (reference))
      (y
        (reference)))))


===========================================
new parameter "E" left,top "RoundBlackKnob"
===========================================
new parameter "E" left,top "RoundBlackKnob"
---
(command
  (new
    (parameter
      (name)
      (x
        (reference))
      (y
        (reference))
      (part))))


======================================
new parameter "E" left+4.5mm,top+4.5mm
======================================
new parameter "E" left+4.5mm,top+4.5mm
---
(command
  (new
    (parameter
      (name)
      (x
        (reference)
        (offset))
      (y
        (reference)
        (offset)))))


=======================================================
new parameter "E" left+4.5mm,top+4.5mm "RoundBlackKnob"
=======================================================
new parameter "E" left+4.5mm,top+4.5mm "RoundBlackKnob"
---
(command
  (new
    (parameter
      (name)
      (x
        (reference)
        (offset))
      (y
        (reference)
        (offset))
      (part))))


=======================
new parameter "E" v1,h1
=======================
new parameter "E" v1,h1
---
(command
  (new
    (parameter
      (name)
      (x
        (reference))
      (y
        (reference)))))


========================================
new parameter "E" v1,h1 "RoundBlackKnob"
========================================
new parameter "E" v1,h1 "RoundBlackKnob"
---
(command
  (new
    (parameter
      (name)
      (x
        (reference))
      (y
        (reference))
      (part))))


===================================
new parameter "E" v1+4.5mm,h1+4.5mm
===================================
new parameter "E" v1+4.5mm,h1+4.5mm
---
(command
  (new
    (parameter
      (name)
      (x
        (reference)
        (offset))
      (y
        (reference)
        (offset)))))


====================================================
new parameter "E" v1+4.5mm,h1+4.5mm "RoundBlackKnob"
====================================================
new parameter "E" v1+4.5mm,h1+4.5mm "RoundBlackKnob"
---
(command
  (new
    (parameter
      (name)
      (x
        (reference)
        (offset))
      (y
        (reference)
        (offset))
      (part))))
